--- a/my-app/src/navbar.css
+++ b/my-app/src/navbar.css
@@ -49,7 +49,46 @@
     border-radius: 10%;
     margin-bottom: -20px;
     border-style: outset;
+    border-color: white;
 }
 .logo:hover{
     border-color: #6EACDA;
 }
+.toggle-button{
+    display:none
+}
+@media (max-width: 600px) {
+    .navbar-links {
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        padding: 1rem;
+        text-align:center;
+        margin-top:5px;
+        background-color: #333;
+        position: absolute;
+        top: 70px; /* Adjust based on your design */
+        left: 0;
+        z-index: 1;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+
+    .navbar .toggle-button {
+        display: block;
+        cursor: pointer;
+        color: white;
+        font-size: 1.5em;
+    }
+    .under::after {
+        display: none;
+    }
+    .under:hover::after {
+       display:none;
+    }
+}
+  
+
