--- a/my-app/src/navbar.css
+++ b/my-app/src/navbar.css
@@ -71,6 +71,7 @@
         top: 70px; /* Adjust based on your design */
         left: 0;
         z-index: 1;
+
     }
 
     .navbar-links.active {
@@ -88,6 +89,9 @@
     }
     .under:hover::after {
        display:none;
+    }
+    .under{
+        margin-bottom: 40px;
     }
 }
   
