--- a/my-app/src/pages/Experience.css
+++ b/my-app/src/pages/Experience.css
@@ -1,5 +1,5 @@
 .expBoxTop {
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     color: #6EACDA;
 }
@@ -49,6 +49,7 @@
     align-items: center;
     display:flex;
     flex-direction: column;
+    margin-top: -25px;
 }
 .botBox{
     margin-left:20px;
